@@ -7,6 +7,7 @@ Version 3.0.0
   - Compact block support (BIP 152)
   - Block soft fork support (BIP 9)
   - Reduce bloom filter size by specifying UPDATE_NONE
+  - OP_CHECKLOCKTIMEVERIFY support (BIP 65)
 
 
 Version 2.1.2
